--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #374151;
+  background-color: #fafafa;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,11 +19,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #f97316;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #ea580c;
 }
 
 body {
@@ -33,6 +32,8 @@ body {
   place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  color: #374151;
+  background-color: #fafafa;
 }
 
 h1 {
@@ -47,12 +48,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #f9fafb;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f97316;
 }
 button:focus,
 button:focus-visible {
